# rust-stock-app

./: Cargo.toml  stock.bat  stock.bat - Shortcut.lnk
src/: main.rs
src/frontend/: package.json  tsconfig.json
src/frontend/assets/: app.css  index.html
src/frontend/src/: main.ts
