[package]
name = "stock"
version = "0.1.0"
authors = ["Mohammed Saud <md.saud020@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web-view = { version = "0.7", features = ["edge"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.118"
serde_json = "1.0"
rusqlite = { version = "0.24", features = ["bundled"] }
